# OxiCloud

./: .gitignore  Cargo.toml  build.rs  devenv.nix  example.env  justfile
.github/workflows/: ci.yml  docker-publish.yml
benches/: ACL-OWNER-CACHE.md  BLOB-MANIFEST.md  BLOB-PREFETCH.md  DB-POOL.md  RUNTIME.md
docs/architecture/: index.md  magic-link-auth.md  user-lifecycle.md
docs/plan/: Groups-version1.md  README.md  plan-ReBAC-Permissions-Grants-Cascading.md
examples/: bench_blob_manifest.rs  bench_db_pool.rs  bench_owner_cache.rs
frontend/: .prettierignore
migrations/: 20260612000000_subject_groups.sql  20260625000000_folder_tree_modified_at.sql  20260627000000_async_tree_etag_queue.sql
scripts/: build-plugin-hello.sh  build-plugin-zip.sh
src/: main.rs
src/common/: config.rs  di.rs  errors.rs  stubs.rs
src/infrastructure/: auth_factory.rs  db.rs
static/: admin.html  index.html  sw.js
static/css/: main.css
static/locales/: ar.json  de.json  en.json  es.json  fa.json  fr.json  hi.json  it.json  ja.json  ko.json  nl.json  pl.json  pt.json  ru.json  zh-TW.json  zh.json
templates/nextcloud/: login.html
tests/api/: dedup_blob_cleanup.hurl  favorites.hurl  files-folders.hurl  grants.hurl  grants_nested_groups.hurl  permissions.hurl  recent.hurl  run.sh  storage_cleanup_check.sh  subject_groups.hurl  trash.hurl
tests/common/: server.env
tests/webdav/: test_chunked_upload_dedup.sh  test_dedup_webdav_multichunk.sh  test_dedup_webdav_ref_count.sh  (+1 more)
wasm/oxicloud-plugin-hello/: Cargo.toml  plugin.toml
wasm/oxicloud-plugin-hello/src/: lib.rs
(+131 files in other folders)
